# my_fastapi_project

./: Dockerfile  pyproject.toml
.github/workflows/: ci_cd.yml
mainapp/: __init__.py  main.py  models.py
tests/: __init__.py  test_main.py
