[tool.poetry]
name = "mainapp"
version = "0.1.0"
description = ""
authors = ["Natalija <vukosavljenatalija@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
